scss/style.scss
@import "../bootstrap-5.0.1/scss/_functions.scss";
@import "../bootstrap-5.0.1/scss/_variables.scss";

$enable-negative-margins: true;

$theme-colors: (
	"primary" : #009688,
	"secondary" : #005996,
	"success" : $success,
	"info" : $info,
	"warning" : $warning,
	"danger" : $danger,
	"light" : $light,
	"dark" : $dark
);

@import "../bootstrap-5.0.1/scss/bootstrap.scss";

/* GENERAL */

html, body {
	height: 100%;
}

body {
	font-family: "roboto", "open-sans", sans-serif;
}

.wrapper {
	height: 100vh;
	overflow: hidden;
	display: flex;
	flex-direction: column;
	align-items: stretch;
}

.wrapper > .main {
	display: flex;
	flex-grow: 1;
	position: relative;
	overflow-y: auto;
}

.btn-primary, .btn-secondary{
	color: var(--bs-white) !important;
}

.collapse-left {
	width: 0 !important;
	white-space: nowrap;
	transition: width .35s ease !important;
}

/* ADMIN LOGIN */

#adminLogin {
	width: 100%;
	max-width: 768px;
}

#adminLoginPage {
	background-image: url('../images/admin-background.jpg');
	background-color: #00963D;
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
}

.formHeader {
	font-size: 100px;
}

/* HEADER */

#pageHeader .logo > img {
	max-width: 34px;
	filter: drop-shadow(0 0 1px var(--bs-white))
}

#pageHeader .h1 {
	font-weight: lighter;
}

/* SIDEBAR */

.sidebar {
	width: 100%;
	max-width: 320px;
	height: 100%;
	background: var(--bs-dark);
	color: var(--bs-white);
	float: left;
	z-index: 999;
	transition: width .7s ease;
}

.sidebar > * {
	overflow: hidden;
}

.sidebar .nav-link {
	color: var(--bs-white);
	display: flex;
	align-items: center;
	justify-content: space-between;
	cursor: pointer;
}

.floatingToggle {
	height: 0;
	overflow: hidden;
	visibility: hidden;
	cursor: pointer;
	text-decoration: none;
	opacity: 0;
	transition: opacity .7s ease;
}

.sidebar.collapse-left .floatingToggle {
	height: auto;
	background: var(--bs-dark);
	color: var(--bs-white);
	width: 50px;
	height: 50px;
	border-radius: 100%;
	padding: $spacer;
	top: $spacer;
	left: $spacer;
	display: flex;
	visibility: visible;
	align-items: center;
	justify-content: center;
	position: absolute;
	opacity: 0.25;
}

.sidebar.collapse-left .floatingToggle:hover {
	opacity: 1;
}

.floatingToggle > span:first-child:not(.fa) {
	display: none;
}

@include media-breakpoint-down(md) {
	.sidebar {
		position: absolute;
		top: 0;
	}
}

